<resources>
    <string name="app_name">CocktailBarApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cocktails">My cocktails</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="recipe">Recipe</string>
    <string name="ingredients">Ingredients</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_your_first_cocktail_here">Add your first cocktail here</string>
</resources>