<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="26dp"
    tools:context=".presentation.CreateCocktailFragment"
    android:orientation="vertical"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="216dp"
        android:layout_height="204dp"
        app:cardBackgroundColor="@color/placeholder_grey"
        app:cardCornerRadius="40dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/photoIconIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/photo" />

        <ImageView
            android:id="@+id/photoIv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            tools:src="@drawable/img" />

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintBottom_toTopOf="@id/saveBtn">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:showDividers="middle"
            android:divider="@drawable/divider">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                app:boxCornerRadiusBottomEnd="28dp"
                app:boxCornerRadiusBottomStart="28dp"
                app:boxCornerRadiusTopEnd="28dp"
                app:boxCornerRadiusTopStart="28dp"
                app:boxStrokeErrorColor="@color/red"
                app:errorTextColor="@color/red"
                app:helperText="Add title"
                app:helperTextEnabled="true"
                app:helperTextTextAppearance="@style/Text.DidactGothic.HelperText"
                app:hintTextAppearance="@style/Text.DidactGothic.Hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Text.DidactGothic.Description" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                app:boxCornerRadiusBottomEnd="28dp"
                app:boxCornerRadiusBottomStart="28dp"
                app:boxCornerRadiusTopEnd="28dp"
                app:boxCornerRadiusTopStart="28dp"
                app:boxStrokeErrorColor="@color/red"
                app:errorTextColor="@color/red"
                app:helperText="Optional field"
                app:helperTextEnabled="true"
                app:helperTextTextAppearance="@style/Text.DidactGothic.HelperText"
                app:hintTextAppearance="@style/Text.DidactGothic.Hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:textAppearance="@style/Text.DidactGothic.Description" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingredients"
                app:boxCornerRadiusBottomEnd="28dp"
                app:boxCornerRadiusBottomStart="28dp"
                app:boxCornerRadiusTopEnd="28dp"
                app:boxCornerRadiusTopStart="28dp"
                app:boxStrokeErrorColor="@color/red"
                app:errorTextColor="@color/red"
                app:helperText="Add ingredients"
                app:helperTextEnabled="true"
                app:helperTextTextAppearance="@style/Text.DidactGothic.HelperText"
                app:hintTextAppearance="@style/Text.DidactGothic.Hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ingredientEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:textAppearance="@style/Text.DidactGothic.Description" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField4"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipe"
                app:boxCornerRadiusBottomEnd="28dp"
                app:boxCornerRadiusBottomStart="28dp"
                app:boxCornerRadiusTopEnd="28dp"
                app:boxCornerRadiusTopStart="28dp"
                app:boxStrokeErrorColor="@color/red"
                app:errorTextColor="@color/red"
                app:helperText="Optional field"
                app:helperTextEnabled="true"
                app:helperTextTextAppearance="@style/Text.DidactGothic.HelperText"
                app:hintTextAppearance="@style/Text.DidactGothic.Hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/recipeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:textAppearance="@style/Text.DidactGothic.Description" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_btn_shape"
        android:textAppearance="@style/Text.DidactGothic.BlueBtnText"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@id/cancelBtn"
        app:layout_constraintTop_toBottomOf="@+id/scrollView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancelBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/white_btn_shape"
        android:text="@string/cancel"
        android:textAppearance="@style/Text.DidactGothic.WhiteBtnText"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>